--- a/gb/22/10/5/n13839139.md
+++ b/gb/22/10/5/n13839139.md
@@ -2,7 +2,6 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽约大学布碌崙校区外传枪击和伤人事件</h2>
-
 <h6></h6>
 <hr>
 	<p>【大纪元2022年10月05日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B8%83%E7%A2%8C%E5%B4%99.md#1">布碌崙</a>市中心<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>大学大都会科技中心（MetroTech Center）附近，10月4日上午发生一起<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9E%AA%E5%87%BB.md#1">枪击</a>和一起伤人事件。</p>
@@ -11,45 +10,36 @@
 <p>警方认为这两起事件没有关联，目前仍在调查中，还没有人被捕。◇</p>
 <p>责任编辑：李悦</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/20/n13806412.md#1">纽约市两起争执引发枪击 警方发布录像缉凶</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/1/n13815121.md#1">纽约市一天两人被刺 一死一伤</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/6/n13818219.md#1">纽约劳工节全市多起枪击 一人死亡</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/7/n13818988.md#1">纽约市8月份犯罪率增26% 谋杀和枪击案减少</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648920.md#1" target="_blank">俞心诚：凯撒之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/24/n10997952.md#1" target="_blank">女儿获9万澳元奖学金 澳洲母女感恩法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918315.md#1">【百年真相】活活饿死数十万人 长春围困战内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921879.md#1">楚一丁：北美沙漠上不死的自由中国魂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925524.md#1">【晚间新闻】武汉减少医疗补贴 民众大规模抗议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925692.md#1">【时事军事】俄乌两军阵亡人数相差五倍的原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926153.md#1">【中国禁闻】间谍气球疑云：中共内斗失控？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925389.md#1">医保减少 武汉退休人员市政门前大规模抗议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925412.md#1">习称将遇上惊涛骇浪 袁红冰：救党不会成功</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925036.md#1">四川失踪女生遗体被发现 曾因胡鑫宇案被关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924175.md#1">惊传与杨颖复合 黄晓明过年无名指戴钻戒引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924832.md#1">从中国回土国探亲 男星唐小强遭强震埋入废墟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925757.md#1">深夜弹钢琴被说扰邻 周杰伦曾用一句话回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925663.md#1">富商丈夫被爆涉嫌诈骗 王丽坤豪宅名车遭冻结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924145.md#1">家乡土耳其发生强震 吴凤贴影片惊呼世界末日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924453.md#1">美国81岁医生力行7件事 让大脑灵光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924737.md#1">梅森罐还能这样用 你一定想不到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923218.md#1">消除胃酸逆流 喝苹果醋17个不可思议的好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923905.md#1">盐水蜂炮名列全球10大庆典 起源竟跟瘟疫有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920006.md#1">筋膜好好的怎会出状况？注意八大祸首（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/5/n13839139.htm">纽约大学布碌崙校区外传枪击和伤人事件</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/5/n13839139.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
